fix: Form Contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,13 @@
     max-width: 300px;
   }
 
+  .contactform {
+    background-color: #666;
+    color: #fff;
+    padding: 0.33rem;
+    border-radius: 5px;
+  }
+
   @media (min-width: 576px) and (max-width: 767.98px) {
     /* Small devices (sm) */
     .breakpoint {
